fixing scrolling issue on mobile tabula rasa

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -278,7 +278,6 @@ model-viewer{
 .tabulaCanvas{
     cursor: crosshair;
     border: 1px solid black;
-    touch-action: none;
 }
 
 /* dev visibility: remove whenever*/
